@@ -1,4 +1,5 @@
 0.08
+ - API change: Add 'cycles' parameter to Object.
  - Regen examples.
 
 0.07 2024-10-30T22:17:14+01:00
